[package]
name = "events"
version = "0.1.0"
authors = ["Michel van der Hulst <michel@voorkanter.com>"]
edition = "2018"

[dependencies]
db-parser = { path = "../db-parser" }
diesel = { version = "1.3.3", features = ["postgres", "chrono", "uuid" ] }
dotenv = "0.13.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = "0.4.6"

serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0"