[package]
name = "web"
version = "0.1.0"
authors = ["Michel van der Hulst <michel@voorkanter.com>"]
edition = "2018"

[dependencies]
iron = "0.6.0"
events = { path = "../events" }
db-parser = { path = "../db-parser" }
worksheets = { path = "../worksheets" }
router = "0.6.0"
iron-cors = "0.8.0"
multipart = "0.15.4"
tempfile = "3.0.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0"